--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -37,6 +37,7 @@ bind = $CONTROL SHIFT, ESCAPE, exec, ~/.config/hypr/scripts/sysmonlaunch.sh  # o
 bind = $mainMod, A, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
 bind = $mainMod, tab, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh w # switch between desktop applications
 bind = $mainMod, R, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh f # browse system files
+bind = $mainMod, D, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh r # launch console application
 
 # Audio control
 bindl  = , F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -o m # toggle audio mute
